--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,15 +3,15 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Client</title>
+    <title>Vout</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="author" content="Giorgi Abuladze">
   </head>
 
   <body>
-    <app-root>Loading...</app-root>
+    <app-root></app-root>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
